--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,12 @@
 		    <artifactId>totp</artifactId>
 		    <version>1.7.1</version>
 		</dependency>
+
+		<dependency>
+    		<groupId>io.vavr</groupId>
+    		<artifactId>vavr</artifactId>
+    		<version>0.10.7</version>
+		</dependency>
 	</dependencies>
 
 	<build>
