feat: Implement user profile creation and retrieval functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=meditrack
+spring.application.name=MediTrack
 
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
