--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,11 @@
     		<artifactId>vavr</artifactId>
     		<version>0.10.7</version>
 		</dependency>
+
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+	    	<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
